ajusta estrutura de layout

--- a/Lista-De-Tarefas.html
+++ b/Lista-De-Tarefas.html
@@ -4,21 +4,25 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="Lista-De-Tarefas.css">
+        <link rel="stylesheet" href="./css/style.css">
+
         <title>Lista de Tarefas</title>
     </head>
     <body>
-            <header id="header">
-                <div id="box-container">
-                    <h1>Lista de Tarefas</h1>
 
+            <div id="app">
+
+                <header id="header">
+
+                    
+                    <h1>Lista de Tarefas</h1>
                     <label> <input id="tarefa" type="text"> </label>
                     <button id="btn-adicionar">adicionar</button>
-                    <div id="tarefas-box"></div>
-                </div>
-                    
-            </header>
 
+                </header>
+
+                <main id="tarefas-box"></main>
+            </div>
 
 
             <script>
