ajusta erro de ul no javascript

--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
                         tarefasListaHTML += "<li>" + tarefas[i] + "</li>";
                     }
                     
+                    tarefasListaHTML += "</ul>"
+
                     document.getElementById("tarefas-box").innerHTML = tarefasListaHTML;
                     document.getElementById("tarefa").value = "";
                 }
