cria h1 para modal

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
             <div class="bg-modal" id="modal">
                 <div class="modal">
                     <span class="close" onclick="fecharModal()">&times;</span>
+                    <h1 class="titulo-modal">Insira o novo nome da tarefa:</h1>
+                
                 </div>
             </div>  
 
